--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
-    "next": "13.1.6",
+    "next": "^13.1.6",
     "next-sanity": "^4.1.2",
     "next-sanity-image": "^5.0.0",
     "react": "18.2.0",
@@ -27,6 +27,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.7"
   }
 }
